# spln-2223

TPC1/: compiler_medicina.py  output.json  test.xml
TPC2/: grammar_lex.py  grammar_yacc.py  readme.md  readme.org  test.dic  test_error.dic
TPC3/: grammar_lex.py  grammar_yacc.py  html.py  pdf.py  readme.md  readme.org  test.dic  tree.py
TPC4/: abbreviations.json  pyproject.toml  tokenizador.py
TPC4/data/: Harry_Potter_e_A_Pedra_Filosofal.txt
TPC4/project/: pyproject.toml
TPC4/project/tokenizador/: __init__.py  main.py
TPC4/tokenizador/: __init__.py  pyproject.toml  readme.md  tokenizador.py
TPC4/tokenizador/tokenizador/: __init__.py
TPC5/: readme.org
TPC5/project/: pyproject.toml
TPC5/project/tokenizador/: __init__.py  abbr_helpers.py  main.py  tokenizador.py
TPC5/project/tokenizador/data/: en  pt
