[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "spln-tokenizador"
authors = [{name = "jpdiasfernandes", email = "jpdiasfernandes13@gmail.com"}]
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
dependencies = [
   "sys",
   "fileinput",
   "re",
   "argparse",
   "json"
]

[project.urls]
Home = "https://github.com/jpdiasfernandes/spln-2223"

[tool.flit.module]
name = "tokenizador"
